# testpkg-tony

./: .gitignore  PKG-INFO  README.md  pyproject.toml
src/test_pkg_tonyjustdevs/: __init__.py  example.py
