
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_pkg_tonyjustdevs"
# dependencies = ["numpy>=1.0"]  # Runtime deps (installed with your package)
version = "0.0.6"
authors = [
  { name="Tony JustDevs", email="tonyjustdevs@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = ["build", "twine"]  # Dev-only tools

[project.urls]
Homepage = "https://github.com/tonyjustdevs/learning_pkging"
Issues = "https://github.com/tonyjustdevs/learning_pkging/issues"